Add a font face for the added font files

--- a/assets/styles/utils.css
+++ b/assets/styles/utils.css
@@ -1,4 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Finger+Paint&display=swap');
+@font-face {
+    font-family: "Finger Paint";
+    src:
+        url("../fonts/fingerpaint-regular-webfont.woff2") format("woff2"),
+        url("../fonts/fingerpaint-regular-webfont.woff") format("woff");
+    font-weight: normal;
+    font-style: normal;
+}
 
 *,
 *::before,
