Change the text color if the body

--- a/assets/styles/utils.css
+++ b/assets/styles/utils.css
@@ -25,6 +25,7 @@
 body {
     font-family: "Finger Paint", sans-serif;
     background-color: var(--background);
+    color: var(--primary);
     line-height: 1.5;
     -webkit-font-smoothing: antialiased;
 }
