--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -20,6 +20,108 @@
     transition: 100ms ease-in-out;
 }
 
-.title button:hover, .title button:active {
+.title button:hover,
+.title button:active {
     scale: 1.1;
+}
+
+/* Game mode */
+
+.game-mode {
+    gap: 8rem;
+    text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.game-mode .x,
+.game-mode .o {
+    display: flex;
+    flex-direction: column;
+}
+
+.game-mode label[for="x"],
+.game-mode label[for="o"] {
+    font-size: 48px;
+    line-height: 30px;
+}
+
+.game-mode input[type="text"] {
+    width: 325px;
+    height: 50px;
+    border: none;
+    background-color: inherit;
+    font-size: 24px;
+    outline: none;
+    padding: 0;
+    padding-left: 1rem;
+}
+
+.game-mode .text-input {
+    position: relative;
+    display: inline-block;
+    width: 330px;
+}
+
+.game-mode .text-input::after {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 75%;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 19px;
+    background: url("../images/text-border-bottom.svg");
+    background-size: cover;
+}
+
+.game-mode input[type="text"]::placeholder {
+    color: var(--primary);
+    text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.game-mode ul {
+    margin-top: 1rem;
+    padding: 0;
+    display: flex;
+    list-style: none;
+    justify-content: space-around;
+}
+
+.game-mode input[type="radio"] {
+    display: none;
+}
+
+.game-mode ul label {
+    position: relative;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    font-size: 24px;
+    width: 145px;
+}
+
+.game-mode ul label::after {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 90%;
+    left: 0;
+    bottom: 0;
+    width: 0;
+    height: 19px;
+    background: url("../images/radio-border-bottom.svg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    transition: width 150ms ease;
+}
+
+.game-mode input[type="radio"]:checked+label::after {
+    width: 100%;
+}
+
+.game-mode button {
+    border: none;
+    background-color: inherit;
 }
