--- a/assets/styles/utils.css
+++ b/assets/styles/utils.css
@@ -27,6 +27,7 @@ body {
     background-color: var(--background);
     color: var(--primary);
     line-height: 1.5;
+    text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
     -webkit-font-smoothing: antialiased;
 }
 
