--- a/assets/styles/utils.css
+++ b/assets/styles/utils.css
@@ -23,6 +23,7 @@
 }
 
 body {
+    overflow: hidden;
     font-family: "Finger Paint", sans-serif;
     background-color: var(--background);
     color: var(--primary);
