--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -40,6 +40,7 @@
 .game-mode form {
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 8rem;
 }
 
@@ -229,7 +230,6 @@
 
 .modal button:hover {
     scale: 1.1;
-    
 }
 
 /* Animation */
